--- a/24.flumelogs.conf
+++ b/24.flumelogs.conf
@@ -1,6 +1,7 @@
 # flumelogs.conf: A single-node Flume configuration
 
 # Name the components on this agent
+# a1 just an artificial name, could be anything else
 a1.sources = r1
 a1.sinks = k1
 a1.channels = c1
@@ -21,6 +22,7 @@ a1.sinks.k1.hdfs.roundValue = 10
 a1.sinks.k1.hdfs.roundUnit = minute
 
 # Use a channel which buffers events in memory
+# memory means volatile, means you don't care about persistence
 a1.channels.c1.type = memory
 a1.channels.c1.capacity = 1000
 a1.channels.c1.transactionCapacity = 100
