--- a/24.flumelogs.conf
+++ b/24.flumelogs.conf
@@ -15,9 +15,12 @@ a1.sources.r1.interceptors.timestampInterceptor.type = timestamp
 
 # Describe the sink
 a1.sinks.k1.type = hdfs
+# store file in the cluster
 a1.sinks.k1.hdfs.path = /user/maria_dev/flume/%y-%m-%d/%H%M/%S
 a1.sinks.k1.hdfs.filePrefix = events-
 a1.sinks.k1.hdfs.round = true
+# round all the minute to the interval of 10 minutes
+# we got new subdirectory generated in each 10 minutes interval
 a1.sinks.k1.hdfs.roundValue = 10
 a1.sinks.k1.hdfs.roundUnit = minute
 
